systemd System and Service Manager

   systemd (214.10-dev)
~~~~~~~
 * core:
 	- struct Manager:
 		• remove “kdbus_fd” field;
 	- remove initramfs support;
 * libsystemd:
 	- struct sd_bus:
 		• remove “machine” field;
 		• remove “kernel” field;
 		• remove “use_memfd” field;
 		• remove “memfd_cache_mutex” field;
 		• remove “memfd_cache” field;
 		• remove “n_memfd_cache” field;
 	- struct bus_body_part:
 		• remove “memfd” field;
 	- remove functions:
 		• bus_message_map_properties_changed;
 		• sd_bus_open_system_container;
 		• bus_kernel_take_fd;
 		• bus_kernel_write_message;
 		• bus_kernel_read_message;
 		• bus_kernel_create_domain;
 		• bus_event_loop_with_idle;
 		• sd_bus_try_close;
 		• bus_remove_match_internal_kernel;
 		• bus_add_match_internal_kernel;
 		• bus_kernel_parse_unique_name;
 		• kdbus_translate_request_name_flags;
 		• bus_kernel_create_bus;
 		• bus_kernel_flush_memfd;
 		• kdbus_translate_attach_flags;
 	- remove “BusTransport” enum;
 	- allow naming event sources;
 	- use event source name rather than address in debug messages;
 	- name event sources used in libraries;
 * loginctl:
 	- remove “machine” argument option;
 * systemd-analyze:
 	- remove “machine” argument option;
 * systemd-run:
 	- remove “machine” argument option;
 * kdbus:
 	- remove “sd-resolve” module;
 	- remove “sd-utf8” module;
 	- remove “bus-container” module;
 * systemctl:
 	- remove “list-machines” command;
 	- remove “recursive” argument option;
 	- remove “machine” argument option;
 	- filter templates from restartable units in bash-completion;
 * units:
 	- remove “org.freedesktop.login1” busname;
 	- remove “org.freedesktop.systemd1” busname;
 	- remove “busnames” target;
 * po:
 	- update Russian translation;
 	- update French translation;
 * tests:
 	- remove “test-resolve” test;
 	- remove “test-bus-kernel” test;
 	- remove “test-bus-kernel-bloom” test;
 	- remove “test-bus-kernel-benchmark” test;
 * build: