@@ -14,6 +14,7 @@ systemd System and Service Manager
  		• remove “memfd_cache_mutex” field;
  		• remove “memfd_cache” field;
  		• remove “n_memfd_cache” field;
+ 		• remove “kdbus_buffer” field;
  	- struct bus_body_part:
  		• remove “memfd” field;
  	- remove functions:
